--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-  "ownerNumber": ["687710621@s.whatsapp.net"],
-  "ownerName": ["????? ??????"],
-  "botName": "𝑪𝑨𝑻𝒁𝒀 - 𝑩𝑶𝑻 𝑴𝑫",
-  "sessionName": "catzy bot-md",
-  "pathimg": "./media/Chitanda.jpg",
+  "ownerNumber": ["+48729759866@s.whatsapp.net"],
+  "ownerName": ["𝒀𝑨𝑵𝒁 𝑴𝑫"],
+  "botName": "𝒀𝑨𝑵𝒁 - 𝑩𝑶𝑻 𝑴𝑫",
+  "sessionName": "𝒀𝑨𝑵𝒁 bot-md",
+  "pathimg": "https://telegra.ph/file/cb0fd470d7d332858864e.jpg",
   "gamewaktu": 90,
   "limitCount": 25,
   "gcount": {
