--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "ownerNumber": ["+48729759866@s.whatsapp.net"],
+  "ownerNumber": ["48729759866@s.whatsapp.net"],
   "ownerName": ["𝒀𝑨𝑵𝒁 𝑴𝑫"],
   "botName": "𝒀𝑨𝑵𝒁 - 𝑩𝑶𝑻 𝑴𝑫",
   "sessionName": "𝒀𝑨𝑵𝒁 bot-md",
